--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -118,7 +118,7 @@
         <div class="container">
             @RenderBody()
         </div>
-        <div class="container">
+        @*<div class="container">
             <div class="row">
                 <div class="col-md-12 col-sm-12">
                     <div class="content-page">
@@ -126,7 +126,7 @@
                     </div>
                 </div>
             </div>
-            </div>
+            </div>*@
         </div>
     
                 <!-- BEGIN PRE-FOOTER -->
