--- a/Views/Shared/_Layout2.cshtml
+++ b/Views/Shared/_Layout2.cshtml
@@ -54,6 +54,63 @@ License: You must have a valid license purchased only from themeforest (the abov
 <!--DOC: menu-always-on-top class to the body element to set menu on top -->
 <body>
     @RenderBody()
+
+    <!-- BEGIN PRE-FOOTER -->
+    <div class="pre-footer" id="contact">
+        <div class="container">
+            <div class="row">
+                <!-- BEGIN BOTTOM ABOUT BLOCK -->
+                <div class="col-md-4 col-sm-6 pre-footer-col">
+                    <h2>About us</h2>
+                    <p>Pertubuhan Pembangunan Intergeriti Malaysia [PPM-018-10-27022016] (National Association Development Integrity) </p>
+                    <p>
+                        Dikenali sebagai  NADI Kebangsaan. Sebuah Pertubuhan
+                        (NGO) Berdaftar beroreantasikan aktiviti Keusahawan, Reakreasi, Latihan, Sukan dan Kebajikan.
+                    </p>
+                </div>
+                <!-- END BOTTOM ABOUT BLOCK -->
+
+                <div class="col-md-4 col-sm-6 pre-footer-col">
+                    <!-- BEGIN BOTTOM CONTACTS -->
+                    <h2>Our Contacts</h2>
+                    <address class="margin-bottom-20">
+                        Email: <a href="mailto:info@nadikebangsaan.com">info@nadikebangsaan.com</a><br>
+                        Tel: <a href="#">0108620466</a>
+                    </address>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- END PRE-FOOTER -->
+    <!-- BEGIN FOOTER -->
+    <div class="footer">
+        <div class="container">
+            <div class="row">
+                <!-- BEGIN COPYRIGHT -->
+                <div class="col-md-6 col-sm-6">
+                    <div class="copyright">2014 © Metronic One Page. ALL Rights Reserved.</div>
+                </div>
+                <!-- END COPYRIGHT -->
+                <!-- BEGIN SOCIAL ICONS -->
+                <div class="col-md-6 col-sm-6 pull-right">
+                    <ul class="social-icons">
+                        <li><a class="rss" data-original-title="rss" href="javascript:void(0);"></a></li>
+                        <li><a class="facebook" data-original-title="facebook" href="javascript:void(0);"></a></li>
+                        <li><a class="twitter" data-original-title="twitter" href="javascript:void(0);"></a></li>
+                        <li><a class="googleplus" data-original-title="googleplus" href="javascript:void(0);"></a></li>
+                        <li><a class="linkedin" data-original-title="linkedin" href="javascript:void(0);"></a></li>
+                        <li><a class="youtube" data-original-title="youtube" href="javascript:void(0);"></a></li>
+                        <li><a class="vimeo" data-original-title="vimeo" href="javascript:void(0);"></a></li>
+                        <li><a class="skype" data-original-title="skype" href="javascript:void(0);"></a></li>
+                    </ul>
+                </div>
+                <!-- END SOCIAL ICONS -->
+            </div>
+        </div>
+    </div>
+    <!-- END FOOTER -->
+    <a href="#promo-block" class="go2top scroll"><i class="fa fa-arrow-up"></i></a>
+
     <!-- Load JavaScripts at the bottom, because it will reduce page load time -->
     <!-- Core plugins BEGIN (For ALL pages) -->
     <script src="~/Content/assets/global/plugins/jquery.min.js" type="text/javascript"></script>
