--- a/Views/Shared/_Layout2.cshtml
+++ b/Views/Shared/_Layout2.cshtml
@@ -53,6 +53,27 @@ License: You must have a valid license purchased only from themeforest (the abov
 </head>
 <!--DOC: menu-always-on-top class to the body element to set menu on top -->
 <body>
+
+    <!-- BEGIN TOP BAR -->
+    <div class="pre-header">
+        <div class="container">
+            <div class="row" style="padding-top:9px !important;">
+                <!-- BEGIN TOP BAR LEFT PART -->
+                <div class="col-md-6 col-sm-6 additional-shop-info">
+                    <ul class="list-unstyled list-inline">
+                        <li><i class="fa fa-phone"></i><span>+60 10862 0466</span></li>
+                        <li><i class="fa fa-envelope-o"></i><span>info@nadikebangsaan.com</span></li>
+                    </ul>
+                </div>
+                <!-- END TOP BAR LEFT PART -->
+                <!-- BEGIN TOP BAR MENU -->
+                @Html.Partial("_LoginPartial")
+                <!-- END TOP BAR MENU -->
+            </div>
+        </div>
+    </div>
+    <!-- END TOP BAR -->
+
     @RenderBody()
 
     <!-- BEGIN PRE-FOOTER -->
