--- a/Views/Manage/Index.cshtml
+++ b/Views/Manage/Index.cshtml
@@ -1,5 +1,8 @@
 ﻿@model MVC5.Models.IndexViewModel
 @using MVC5.Common
+@{
+    ViewBag.Title = "Profile";
+}
 
 <script src="~/Scripts/clipboard.min.js"></script>
 <script>
@@ -150,6 +153,7 @@
         <div class="portlet-body">
             <div class="note note-success">
                 <h4 class="block">Manfaat Keahlian Hanya Bagi Ahli Sah Nadi Kebangsaan.</h4>
+                <a href="/Manage/ApplyMembership" class="btn btn-primary" style="color:white;">BORANG PERMOHONAN KEAHLIAN</a>
                 <a href="/Manage/ApplyMembership"><i class="fa fa-tags"></i>Sila Klik Untuk Permohonan Keahlian</a>
                 </div>
             @*@Html.Partial("_MembershipFormPartial")*@
