--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -84,7 +84,7 @@
     <!-- Checkout block END -->
     <!-- Facts block BEGIN -->
     <div class="facts-block content content-center" id="facts-block">
-        <h2>Kelebihan keahlian dibawah pakage ini diantaranya:</h2>
+        <h2>Kelebihan keahlian dibawah pakej ini diantaranya:</h2>
         <div class="container">
             <div class="row">
                 <div class="col-md-3 col-sm-3 col-xs-6">
@@ -107,8 +107,8 @@
                 </div>
                 <div class="col-md-3 col-sm-3 col-xs-6">
                     <div class="item nadi-background-orange">
-                        <strong>Towing </strong>
-                        Service
+                        <strong>Khidmat</strong>
+                        penundaan kenderaan
                     </div>
                 </div>
             </div>
