--- a/Views/Home/Article.cshtml
+++ b/Views/Home/Article.cshtml
@@ -26,7 +26,7 @@
             <h2>@Model.Header</h2>
             <div class="blog-item">
                 <div class="row">
-                    <div class="col-lg-2 col-sm-2">
+                    @*<div class="col-lg-2 col-sm-2">
                         <div class="date-wrap">
                             <span class="date">
                                 @Model.DateCreated.Day
@@ -36,7 +36,7 @@
                             </span>
                         </div>
 
-                    </div>
+                    </div>*@
 
                     <div class="col-lg-10 col-sm-10">
 
