--- a/Views/Listing/Details.cshtml
+++ b/Views/Listing/Details.cshtml
@@ -77,7 +77,7 @@
 
 
 
-            <div class="row">
+            <div class="row" style="padding-top:20px;">
 
 
 
@@ -91,8 +91,8 @@
                     {
                         @Html.ActionLink("View FullAddress", "Register", "Account")
                     }
-
-                    <h4>@Model.listing.PropertyType.Nama (<i class="fa fa-eye"></i> @ViewBag.ListingViewCount Views)</h4>
+                    
+                    <h5 style="line-height:30px;">@Model.listing.PropertyType.Nama (<i class="fa fa-eye"></i> @ViewBag.ListingViewCount Views)</h5>
                     <div class="blog-item">
                         <div class="row">
 
@@ -370,20 +370,21 @@
 
                         </div>
                         <div class="row">
-                            <div class="col-lg-12 col-sm-12">
+                            <div class="col-lg-6 col-sm-6">
                                 
                                 <h2><i class="fa fa-calculator"></i> Loan Calculator</h2>
                                 <hr />
-                                <div class="form-group col-md-4">Loan Amount (RM)
+                                <div class="form-group col-md-12">Loan Amount (RM)
                                     <input type="text" class="form-control" name="amount" value="@Model.listing.Price" onkeyup="loanCalculater()">
                                     </div>
-                                <div class="form-group col-md-4">Interest Rate (%)
+
+                                <div class="form-group col-md-12">Interest Rate (%)
                                     <input type="text" class="form-control" name="interest" value="4.5" onkeyup="loanCalculater()">
                                 </div>
-                                <div class="form-group col-md-4">Loan Term (Years)
+                                <div class="form-group col-md-12">Loan Term (Years)
                                     <input type="text" class="form-control" name="years" value="30" onkeyup="loanCalculater()">
                                 </div>
-                                <div class="form-group col-md-4">Monthly Payment (RM)
+                                <div class="form-group col-md-12">Monthly Payment (RM)
                                     <input type="text" class="form-control" readonly="readonly" name="monthly-payment">
                                 </div>
                                     
